# wavelet-noise

./: CMakeLists.txt  README.md  report.aux  report.tex
pictures/DFT/: parameters.txt
src/: main.cpp
